k8s/k8s-service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-k8s-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: spring-boot-k8s
